# codelist-tools

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  package-lock.json  rustfmt.toml
.github/workflows/: run_preflight.yml  run_python_unit_tests.yml  run_rust_unit_tests.yml
bindings/: README.md
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/example/: make_codelist.py
bindings/python/src/: codelist.rs  factory.rs  lib.rs
bindings/python/src/codelists/: codelist.rs  mod.rs
bindings/python/tests/: run.sh  test_codelist.py
bindings/r/: .Rbuildignore  Cargo.toml  DESCRIPTION  NAMESPACE  README.md
bindings/r/.cargo/: config.toml
bindings/r/R/: extendr-wrappers.R
bindings/r/scripts/: scratch.R
bindings/r/src/: Makevars  Makevars.in  Makevars.win.in  codelist-win.def  entrypoint.c  lib.rs
bindings/r/src/rust/: Cargo.toml
bindings/r/src/rust/src/: lib.rs
python/: Cargo.toml  requirements.txt
python/src/: lib.rs
python_bindings/: pyproject.toml
rust/: Cargo.toml  Cargo.workspace.toml  README.md
rust/codelist-builder-rs/: Cargo.toml  README.md
rust/codelist-builder-rs/src/: errors.rs  lib.rs  snomed_usage_data.rs  usage_year.rs
rust/codelist-builder-rs/src/config/: snomed_usage_config.json
rust/codelist-builder-rs/tests/: download_usage.rs
rust/codelist-rs/: Cargo.toml  README.md  test.json
rust/codelist-rs/examples/: sandbox.rs
rust/codelist-rs/src/: code_entry.rs  codelist.rs  codelist_factory.rs  codelist_options.rs  errors.rs  lib.rs  metadata.rs  types.rs
rust/codelist-rs/src/logging/: mod.rs
rust/codelist-rs/src/metadata/: categorisation_and_usage.rs  metadata.rs  metadata_source.rs  mod.rs  provenance.rs  purpose_and_context.rs  validation_and_review.rs
rust/codelist-systems-rs/: Cargo.toml
rust/codelist-systems-rs/proptest-regressions/: icd10.txt  opcs.txt  snomed.txt
rust/codelist-systems-rs/src/: capabilities.rs  core.rs  ctv3.rs  errors.rs  icd10.rs  lib.rs  opcs.rs  snomed.rs
rust/codelist-systems-rs/tests/: ctv3_rules.rs  icd10_rules.rs  opcs_rules.rs  snomed_rules.rs
rust/codelist-validator-rs/: Cargo.toml  README.md
rust/codelist-validator-rs/src/: ctv3_validator.rs  custom_validator.rs  errors.rs  icd10_validator.rs  lib.rs  opcs_validator.rs  snomed_validator.rs  validator.rs
rust/src/: lib.rs
rust/src/validation/: opcs_validator.rs
src/: code_entry.rs  codelist.rs  codelist_type.rs  errors.rs  lib.rs
src/validation/: icd10_validator.rs  mod.rs  opcs_validator.rs  snomed_validator.rs
