[package]
name = "codelist-builder-rs"
version = "0.1.0"
edition = "2021"
authors = ["Caroline Morton <caroline@parakeetconsulting.com>"]
description = "Builder library for medical codelists"

[dependencies]
codelist-rs = { path = "../codelist-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { version = "2.0.9" }
thiserror-ext = { version = "0.2.1" }
reqwest = { version = "0.12.2" }
csv = { version = "1.3.1" }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
wiremock = { version = "0.6.4" }