[package]
name = "codelist-rs"
version = "0.1.0"
edition = "2021"
authors = ["Caroline Morton <caroline@parakeetconsulting.com>", "Emma Bagshaw"]
description = "Base library for medical code list handling"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.0"
tempfile = "3.0"
thiserror = "2.0.9"
thiserror-ext = "0.2.1"
